# GlassBoxAI-GAN

./: Cargo.toml  README.md  cudarc_progress.md  gan_facade_tests.sh  gnnreadme.md  project.md  pyproject.toml
c_bindings/: Cargo.toml
c_bindings/src/: kani_ffi_tests.rs  lib.rs
csharp_bindings/: FacadedGan.csproj
csharp_bindings/src/: Config.cs  Gan.cs  Matrix.cs  Native.cs  Network.cs  Training.cs
ganfacade_testout/: dec_test.enc  enc_test.enc  gan_json_test.json  gan_test.json  losses_test.csv  samples_ep1.csv  test_metrics.csv
go_bindings/: go.mod
go_bindings/facadedgan/: facadedgan.go
include/: facaded_gan.h  facaded_gan.hpp
julia_bindings/: Project.toml
julia_bindings/src/: FacadedGan.jl
kani/: bound_checks.rs  constant_time.rs  deadlock_free.rs  div_by_zero.rs  enum_exhaustion.rs  float_sanity.rs  global_state.rs  input_sanitization.rs  integer_overflow.rs  memory_limits.rs  mod.rs  no_panic.rs  pointer_validity.rs  resource_limits.rs  result_coverage.rs  state_machine.rs
nodejs_bindings/: Cargo.toml  package.json
nodejs_bindings/src/: lib.rs
python_bindings/: Cargo.toml
python_bindings/src/: lib.rs
src/: activations.rs  attention.rs  convolution.rs  facade.rs  kani_tests.rs  layer.rs  lib.rs  loss.rs  main.rs  matrix.rs  network.rs  normalization.rs  optimizer.rs  quality_tests.rs  random.rs  security.rs  tests.rs  training.rs  types.rs
src/backend/: cpu.rs  cuda.rs  mod.rs  opencl.rs
zig_bindings/: build.zig  build.zig.zon
zig_bindings/src/: example.zig  facaded_gan.zig
